--- a/templates/evento.html
+++ b/templates/evento.html
@@ -4,15 +4,18 @@
 <h2>Evento</h2>
 <br>
 <form action="submit" method="post">{% csrf_token %}
-    <input type="text" name="titulo" size="23">
+    <label>Titulo</label>
+    <br>
+    <input type="number" name="id_evento" value="{{ evento.id }}" hidden>
+    <input type="text" name="titulo" size="23" value="{{ evento.titulo }}">
     <br>
     <label>Data do evento:</label>
     <br>
-    <input type="datetime-local" name="data_evento">
+    <input type="datetime-local" name="data_evento" value={{ evento.get_data_input_evento }}>
     <br>
     <label>Descrição</label>
     <br>
-    <textarea name="descricao" cols="23" rows="6"></textarea>
+    <textarea name="descricao" cols="23" rows="6">{{ evento.descricao }}</textarea>
     <br><br>
     <button type="submit">Salvar</button>
     <a href="/">
